--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
   },
   "jspmNodeConversion": false,
   "jspm": {
+			    "directories": {
+									      "baseURL": ""
+												    },
+
     "dependencies": {
       "knockout": "github:knockout/knockout@^3.4.0",
       "text": "github:systemjs/plugin-text@^0.0.7",
