--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "homepage": "https://github.com/MaciejMisztal/mko-custom#readme",
   "devDependencies": {
     "jasmine": "^2.4.1",
+    "jasmine-ajax": "^3.2.0",
     "jasmine-core": "^2.4.1",
     "jspm": "^0.16.33",
     "karma": "^0.13.22",
     "karma-jasmine": "^0.3.8",
+    "karma-jasmine-ajax": "^0.1.13",
     "karma-jspm": "^2.1.0",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-spec-reporter": "0.0.26",
