--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mko-custom",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Decorator for creating knockoutJs custom element",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "karma start --single-run"
   },
@@ -25,7 +25,7 @@
     "jasmine": "^2.4.1",
     "jasmine-ajax": "^3.2.0",
     "jasmine-core": "^2.4.1",
-    "jspm": "^0.16.33",
+    "jspm": "^0.16.39",
     "karma": "^0.13.22",
     "karma-jasmine": "^0.3.8",
     "karma-jasmine-ajax": "^0.1.13",
